# v19.io

./: .gitignore  Cargo.toml  README.md  build.rs  cloudflare-env.d.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.ts  wrangler.jsonc  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
app/(marketing)/: layout.tsx  page.tsx
app/api/admin/banners/: route.ts
app/api/admin/clients/: route.ts
app/api/admin/invoices/: route.ts
app/api/admin/quotes/: route.ts
app/api/admin/quotes/[id]/finalize/: route.ts
app/api/admin/sites/: route.ts
app/api/admin/subscriptions/: route.ts
app/api/auth/invite/[token]/: route.ts
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/auth/me/: route.ts
app/api/auth/reset/: route.ts
app/api/client/billing/: route.ts
app/api/client/invoices/: route.ts
app/api/client/overview/: route.ts
app/api/cms/auth/[siteId]/: route.ts
app/api/cms/content/[siteId]/[page]/: route.ts
app/api/cms/images/[...key]/: route.ts
app/api/stripe/webhook/: route.ts
app/dashboard/: banners.tsx  layout.tsx  page.tsx  sidebar.tsx
app/dashboard/admin/: layout.tsx  page.tsx  sidebar.tsx
app/dashboard/admin/clients/: page.tsx
app/dashboard/admin/invoices/: page.tsx
app/dashboard/admin/quotes/: page.tsx
app/dashboard/admin/sites/: page.tsx
app/dashboard/admin/subscriptions/: page.tsx
app/dashboard/billing/: page.tsx
app/dashboard/invite/[token]/: page.tsx
app/dashboard/invoices/: page.tsx
app/dashboard/login/: page.tsx
app/dashboard/reset/: page.tsx
app/dashboard/reset/[token]/: page.tsx
app/dashboard/sites/: page.tsx
components/: beta-badge.tsx  command-menu.tsx  cta-section.tsx  ember-particles.tsx  footer.tsx  hero-section.tsx  icons.tsx  kanri-section.tsx  main-nav.tsx  mesh-background.tsx  mobile-nav.tsx  navigation.tsx  pricing-section.tsx  site-header.tsx  skeleton.tsx  toast.tsx  web-services-section.tsx
components/ui/: button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  navigation-menu.tsx  sheet.tsx
emails/: invite.tsx  invoice.tsx  payment-failed.tsx  reset.tsx
lib/: auth.ts  cms-config.ts  cms.ts  email.ts  nav.ts  stripe.ts
migrations/: 0001_initial.sql
src/: app.rs  lib.rs  main.rs  server.rs
src/components/: logo.rs  mod.rs  product_header.rs
src/entities/: user.rs
src/routes/: mod.rs
src/routes/product/: index.rs  mod.rs
style/: tailwind.css
