[package]
name = "v19-io"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# global deps
log = "0.4"
cfg-if = "1.0"
tracing = "0.1"

# global deps
[dependencies.leptos-use]
git = "https://github.com/mrvillage/leptos-use"
branch = "main"

[dependencies.leptos]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
default-features = false
features = ["rustls", "serde", "nightly"]

[dependencies.leptos_router]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
default-features = false
features = ["nightly"]

[dependencies.leptos_meta]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
default-features = false
features = ["nightly"]

[dependencies.leptos_dom]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
default-features = false
features = ["nightly"]

[dependencies.leptos_reactive]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
default-features = false
features = ["nightly"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.mrvillage-ui]
git = "https://github.com/mrvillage/mrvillage-ui.git"
branch = "master"
default-features = false


# build deps
[build-dependencies.mrvillage-ui]
git = "https://github.com/mrvillage/mrvillage-ui.git"
branch = "master"

# client deps
[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.console_log]
version = "1.0"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

# server deps
[dependencies.leptos_actix]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
optional = true

[dependencies.simple_logger]
version = "4.0"
optional = true

[dependencies.actix-files]
version = "0.6"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[dependencies.actix-web]
version = "4.2"
features = ["macros"]
optional = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.sea-orm]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "mock",
  "macros",
  "sqlx-sqlite",
  "with-chrono",
  "debug-print",
]
optional = true

[dependencies.sanctum]
version = "0.1"
optional = true

[features]
default = ["ssr", "hydrate"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos_reactive/hydrate",
  "mrvillage-ui/hydrate",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_reactive/ssr",
  "leptos-use/ssr",
  "mrvillage-ui/ssr",
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:simple_logger",
  "dep:serde_json",
  "dep:tokio",
  "dep:dotenvy",
  "dep:sea-orm",
  "dep:sanctum",
]

[package.metadata.leptos]
site-root = "target/site"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-address = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
lib-features = ["hydrate"]

[patch.crates-io]
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "main" }

[profile.dev.package."*"]
opt-level = 3

[dependencies.leptos-tabler-icons]
git = "https://github.com/mrvillage/leptos-tabler-icons.git"
branch = "master"
features = [
  "IconAddressBook",
  "IconCode",
  "IconGitCherryPick",
  "IconLogin",
  "IconUser",
  "IconInfoCircle",
]
